# contextkit-nemo-n950-n9

./: .gitignore  CMakeLists.txt  README
energy/: CMakeLists.txt  energy_test.cpp
energy/src/: CMakeLists.txt  bmeipc.c  energy.cpp
energy/tests/: CMakeLists.txt  energy_mon.cpp
power/: CMakeLists.txt  README  power.context
power/include/: power_properties.hpp
power/src/: CMakeLists.txt  power.cpp
scripts/: gen_context.awk
